--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@typescript-eslint/parser": "^6.7.0",
     "eslint": "^8.49.0",
     "nodemon": "^2.0.21",
+    "prisma": "^5.3.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@prisma/client": "5.3.0",
     "express": "^4.18.2"
   }
 }
